[gd_scene load_steps=16 format=3 uid="uid://cywm6kkksfbji"]

[ext_resource type="Texture2D" uid="uid://blmeh2mim8v2q" path="res://assets/input_box.png" id="1_j5q26"]
[ext_resource type="Texture2D" uid="uid://cjsxdal3yjie2" path="res://assets/hang_platform.png" id="2_tdqyw"]
[ext_resource type="Script" path="res://scripts/CheckButton.gd" id="3_bajqr"]
[ext_resource type="Script" path="res://scripts/ClearButton.gd" id="3_iwk8a"]
[ext_resource type="Texture2D" uid="uid://cnlgbtmytj8kd" path="res://assets/sad_head.png" id="3_tkqqk"]
[ext_resource type="Texture2D" uid="uid://q2le0xi88yps" path="res://assets/happy_head.png" id="4_hngtt"]
[ext_resource type="Texture2D" uid="uid://dkn7hv7sun7t5" path="res://assets/left_arm.png" id="5_28utr"]
[ext_resource type="Texture2D" uid="uid://b27nmiosl4pus" path="res://assets/right_arm.png" id="6_1btuc"]
[ext_resource type="Texture2D" uid="uid://dbqi62etohyhs" path="res://assets/left_leg.png" id="7_56ktb"]
[ext_resource type="Texture2D" uid="uid://4si46vpue2hi" path="res://assets/right_leg.png" id="8_vwe6d"]
[ext_resource type="Texture2D" uid="uid://bia6ie533c5on" path="res://assets/torso.png" id="9_uvdty"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xe77x"]
bg_color = Color(0.858824, 0.858824, 0.858824, 0.862745)
border_width_bottom = 3
border_color = Color(0.180392, 0.180392, 0.180392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lb824"]
bg_color = Color(1, 1, 1, 0.294118)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bhiv"]
bg_color = Color(0, 0.72549, 0.235294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6hty4"]
bg_color = Color(0.842526, 0.0491094, 0.21601, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="GameScene" type="Node2D"]

[node name="WhiteBackground" type="ColorRect" parent="."]
offset_left = 2.0
offset_right = 1151.0
offset_bottom = 648.0

[node name="RectDesignInput" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = -5.0
offset_top = 434.0
offset_right = 1157.0
offset_bottom = 655.0
texture = ExtResource("1_j5q26")

[node name="LineEdit" type="LineEdit" parent="WhiteBackground"]
layout_mode = 0
offset_left = 215.0
offset_top = 542.0
offset_right = 928.0
offset_bottom = 610.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_xe77x")
theme_override_styles/focus = SubResource("StyleBoxFlat_lb824")
alignment = 1
caret_blink = true

[node name="HangPlatform" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 297.0
offset_top = -29.0
offset_right = 688.0
offset_bottom = 426.0
texture = ExtResource("2_tdqyw")

[node name="CheckButton" type="Button" parent="WhiteBackground"]
layout_mode = 0
offset_left = 970.0
offset_top = 544.0
offset_right = 1065.0
offset_bottom = 593.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_8bhiv")
text = "CHECK"
script = ExtResource("3_bajqr")

[node name="ClearButton" type="Button" parent="WhiteBackground"]
layout_mode = 0
offset_left = 68.0
offset_top = 554.0
offset_right = 153.0
offset_bottom = 599.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_6hty4")
text = "CLEAR"
script = ExtResource("3_iwk8a")

[node name="SadHead" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 628.0
offset_top = 144.0
offset_right = 679.0
offset_bottom = 194.0
texture = ExtResource("3_tkqqk")
expand_mode = 1

[node name="HappyHead" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 886.0
offset_top = 30.0
offset_right = 937.0
offset_bottom = 81.0
texture = ExtResource("4_hngtt")
expand_mode = 1

[node name="LeftArm" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 596.0
offset_top = 206.0
offset_right = 619.0
offset_bottom = 322.0
texture = ExtResource("5_28utr")
expand_mode = 1

[node name="RightArm" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 694.0
offset_top = 205.0
offset_right = 716.0
offset_bottom = 320.0
texture = ExtResource("6_1btuc")
expand_mode = 1

[node name="LeftLeg" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 627.0
offset_top = 291.0
offset_right = 658.0
offset_bottom = 454.0
texture = ExtResource("7_56ktb")
expand_mode = 1

[node name="RightLeg" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 666.0
offset_top = 286.0
offset_right = 697.0
offset_bottom = 451.0
texture = ExtResource("8_vwe6d")
expand_mode = 1

[node name="Torso" type="TextureRect" parent="WhiteBackground"]
layout_mode = 0
offset_left = 625.0
offset_top = 191.0
offset_right = 687.0
offset_bottom = 300.0
texture = ExtResource("9_uvdty")
expand_mode = 1

[node name="Label" type="Label" parent="WhiteBackground"]
layout_mode = 0
offset_left = 187.0
offset_top = 465.0
offset_right = 935.0
offset_bottom = 536.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Bisaya dish with pork, bay leaves, pepper, & vinegar"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="WhiteBackground/CheckButton" to="WhiteBackground/CheckButton" method="_on_pressed"]
[connection signal="pressed" from="WhiteBackground/ClearButton" to="WhiteBackground/ClearButton" method="_on_pressed"]
